--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,24 +1,29 @@
 doctype html
-html(lang="en")
+html(lang="en", ng-app)
 head
 	title HelloGuys
 	link(rel='stylesheet', href='dist/css/all.min.css')
 	link(rel='stylesheet', href='dist/css/bootstrap.min.css')
 	
 body
-	h1 Front-End Watcher
-	p
-		| Lorem ipsum dolor sit amet,
-		| consectetur adipisicing elit. Omnis, culpa?
-	.box
-	ul.tabs
-		li first
-		li second
-		li third
-		li forth
-		li fifth
+	.container
+		h1 Front-End Watcher
+		p
+			| Lorem ipsum dolor sit amet,
+			| consectetur adipisicing elit. Omnis, culpa?
+		.box
+		ul.tabs
+			li first
+			li second
+			li third
+			li forth
+			li fifth
+			.clearfix
+		input(type="text", ng-model="name")
+		p {{ name }}
 
 
 	script(src='dist/js/jquery-2.1.1.min.js')
+	script(src='dist/js/angular.min.js')
 	script(src='dist/js/bootstrap.min.js')
 	script(src='dist/js/all.min.js')
