--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 .box {
 	width: 100px;
 	height: 100px;
-	background-color: red;
+	background-color: green;
 	margin: 50px;
 	border: 6px solid #000;
 }
@@ -15,4 +15,7 @@
 		color: #fff;
 		background-color: #228;
 	}
+}
+.clearfix {
+	clear: both;
 }
